Domains: Fix domain suggestions layout for tablet resolutions (#55465)
Changes proposed in this Pull Request:

This PR fixes a layout bug introduced by #55034 - domain suggestions were misaligned when viewed in tablet resolutions (> 480px and < 1080px). It affected both the domain suggestions list in the "Add a domain to this site" page and in the signup flow. Reported in p1628779410064200-slack-C020919TDRA.

Testing instructions:

Open the live Calypso link, change your browser resolution to "iPad" (768 x 1024 px), go to the /start signup flow, search for domains and ensure the domain suggestions are not misaligned.

Commits:

* Fix domain suggestions layout for tablet resolutions

* Fix pricing and "Select" button alignment in tablet resolution

--- a/client/components/domains/domain-suggestion/style.scss
+++ b/client/components/domains/domain-suggestion/style.scss
@@ -174,7 +174,7 @@
 	flex-direction: column-reverse;
 	flex-wrap: nowrap;
 
-	@include break-xlarge {
+	@include break-mobile {
 		flex-direction: row;
 	}
 
@@ -256,13 +256,9 @@
 
 	@include break-mobile {
 		width: auto;
-	}
-
-	&.is-primary {
-		@include breakpoint-deprecated( '>480px' ) {
-			margin-left: 1em;
-			margin-top: 0;
-		}
+		flex: 1 0 auto;
+		margin-left: 1em;
+		margin-top: 0;
 	}
 
 	.is-placeholder & {
@@ -279,22 +275,6 @@
 		color: var( --color-primary );
 		margin-top: 0;
 		padding: 0;
-	}
-
-	.is-section-signup & {
-		@include breakpoint-deprecated( '>480px' ) {
-			flex: 1 0 auto;
-			margin-left: 1em;
-			margin-top: 0;
-		}
-	}
-
-	.is-section-domains & {
-		@include breakpoint-deprecated( '>800px' ) {
-			flex: 1 0 auto;
-			margin-left: 1em;
-			margin-top: 0;
-		}
 	}
 }
 
