--- a/client/signup/style.scss
+++ b/client/signup/style.scss
@@ -508,6 +508,7 @@ body.is-section-signup.is-white-signup .layout:not( .dops ):not( .is-wccom-oauth
 		}
 
 		.form-password-input .form-password-input__toggle-visibility {
+			/*!rtl:ignore*/
 			right: 17px;
 		}
 
