--- a/client/assets/stylesheets/_nav-unification.scss
+++ b/client/assets/stylesheets/_nav-unification.scss
@@ -114,15 +114,14 @@
 	}
 
 	.masterbar__toggle-drafts.button.is-borderless {
-		margin-left: -20px;
+		margin-left: -15px;
+		border-top-left-radius: 0;
+		border-bottom-left-radius: 0;
+		min-width: initial;
 
 		&:hover {
 			background-color: #e9e9ea;
-
-			.count {
-				border-color: $nav-unification-primary;
-				color: $nav-unification-primary;
-			}
+			color: $nav-unification-primary;
 		}
 	}
 
