Fix alignment of success message in bulk email contact update (#55507)
Changes proposed in this Pull Request:

This PR fixes the alignment of the success message in the bulk email contact update page. This bug was introduced in #54649, which updated the components used in the bulk contact update too.

Testing instructions:

Open the live Calypso link, go to the bulk email contact update page (domains/manage?site=all&action=edit-contact-email) and select at least one domain to update its email contact. Ensure that the message is vertically aligned with the domain name.

--- a/client/my-sites/domains/domain-management/list/style.scss
+++ b/client/my-sites/domains/domain-management/list/style.scss
@@ -126,6 +126,10 @@
 			transform: translateY( 4px );
 		}
 	}
+
+	.domain-item__status .domain-notice {
+		margin-top: 0;
+	}
 }
 
 .domain-item__title {
