Adjust image width

--- a/client/my-sites/checkout/checkout-thank-you/domains/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/domains/style.scss
@@ -9,6 +9,10 @@
 	.thank-you__container {
 		&-header {
 			background-color: var( --studio-blue-50 );
+
+			img {
+				max-width: 260px;
+			}
 		}
 	}
 }
