--- a/client/my-sites/checkout/checkout-thank-you/domains/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/domains/style.scss
@@ -8,10 +8,24 @@
 .checkout-thank-you__domains {
 	.thank-you__container {
 		&-header {
+			width: auto;
 			background-color: var( --studio-blue-50 );
+			padding: 50px 20px;
 
 			img {
 				max-width: 260px;
+			}
+
+			&-content {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				padding-top: 30px;
+				color: var( --studio-white );
+
+				&-title {
+					font-size: 2rem;
+				}
 			}
 		}
 	}
