--- a/client/my-sites/checkout/checkout-thank-you/domains/style.scss
+++ b/client/my-sites/checkout/checkout-thank-you/domains/style.scss
@@ -21,7 +21,7 @@
 		&__container-header {
 			width: auto;
 			background-color: var( --studio-blue-50 );
-			padding: 50px 20px;
+			padding: 50px 20px 30px;
 			text-align: center;
 			height: auto;
 
